// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItemRadio should update the state and close the menu once clicked 1`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-1"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 1
  </span>
</li>
`;

exports[`MenuItemRadio should update the state and close the menu once clicked 2`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-2"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 2
  </span>
</li>
`;

exports[`MenuItemRadio should update the state and close the menu once clicked 3`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-1"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 1
  </span>
</li>
`;

exports[`MenuItemRadio should update the state and close the menu once clicked 4`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-2"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 2
  </span>
</li>
`;
